feat(OH-200-user-details-api): Integrated user details API along with refactoring in listing page and router history

--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -227,7 +227,7 @@ $mat-warn: (
   darker: #e45c43,
   200: #ec795f, // For slide toggle,
   contrast : (
-    main: $dark-primary-text,
+    main: $light-primary-text,
     lighter: $dark-primary-text,
     darker: $dark-primary-text,
   )
