feat(edit):user edit module

--- a/libs/user/user-edit/src/lib/user-edit.component.html
+++ b/libs/user/user-edit/src/lib/user-edit.component.html
@@ -1,1 +1,6 @@
-<p>user-edit works!</p>
+<div class='p-4'>
+  <mat-card class='p-0'>
+    <div class='container-fluid'>
+    </div>
+  </mat-card>
+</div>
