--- a/libs/user/user-edit/src/lib/user-edit.component.html
+++ b/libs/user/user-edit/src/lib/user-edit.component.html
@@ -1,6 +1,19 @@
 <div class='p-4'>
-  <mat-card class='p-0'>
-    <div class='container-fluid'>
-    </div>
-  </mat-card>
+
+    <mat-card class='p-0'>
+      <div class='container-fluid p-4'>
+        <div class='row mb-4'>
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+            <mat-label>Name</mat-label>
+            <input matInput autocomplete='no' type='text' formControlName='name'  required>
+          </mat-form-field>
+          </div>
+        </div>
+
+
+
+      </div>
+    </mat-card>
+
 </div>
