feat(edit):user edit detail fields

--- a/libs/user/user-edit/src/lib/user-edit.component.html
+++ b/libs/user/user-edit/src/lib/user-edit.component.html
@@ -10,7 +10,48 @@
           </mat-form-field>
           </div>
         </div>
+        <div class='row mb-4'>
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label>User Name</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
+            </mat-form-field>
+          </div>
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label>Email ID</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
+            </mat-form-field>
+          </div>
 
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label>language Detail</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class='row mb-4'>
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label>Role</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
+            </mat-form-field>
+          </div>
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label>CREATED AT</mat-label>
+              <input matInput autocomplete='no' type='date' formControlName='name'  required>
+            </mat-form-field>
+          </div>
+
+          <div class='col-4'>
+            <mat-form-field class='w-100'>
+              <mat-label> UPDATED AT</mat-label>
+              <input matInput autocomplete='no' type='date' formControlName='name'  required>
+            </mat-form-field>
+          </div>
+        </div>
 
 
       </div>
