--- a/libs/user/user-edit/src/lib/user-edit.component.html
+++ b/libs/user/user-edit/src/lib/user-edit.component.html
@@ -41,20 +41,26 @@
           <div class='col-4'>
             <mat-form-field class='w-100'>
               <mat-label>CREATED AT</mat-label>
-              <input matInput autocomplete='no' type='date' formControlName='name'  required>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
             </mat-form-field>
           </div>
 
           <div class='col-4'>
             <mat-form-field class='w-100'>
               <mat-label> UPDATED AT</mat-label>
-              <input matInput autocomplete='no' type='date' formControlName='name'  required>
+              <input matInput autocomplete='no' type='text' formControlName='name'  required>
             </mat-form-field>
           </div>
         </div>
-
+        <div class='row '>
+          <div class='col-12'>
+            <button mat-flat-button color='primary'>Save</button>
+            <button mat-stroked-button class='ml-2' >Cancel</button>
+          </div>
+        </div>
 
       </div>
+
     </mat-card>
 
 </div>
