--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -21,23 +21,23 @@
               ></hidden-innovation-dashboard-count-card>
             </div>
           </div>
-          <div class='row' *ngIf='false'>
-            <div class='col-12'>
-              <mat-card>
-                <h1 class='card-header'>Statistics</h1>
-                <mat-card-content>
-                  <canvas baseChart
-                          chartType='line'
-                          [colors]='chartColors'
-                          [datasets]='chartData'
-                          [labels]='chartLabels'
-                          [legend]='chartLegend'
-                          [options]='chartOptions'>
-                  </canvas>
-                </mat-card-content>
-              </mat-card>
-            </div>
-          </div>
+<!--          <div class='row' *ngIf='false'>-->
+<!--            <div class='col-12'>-->
+<!--              <mat-card>-->
+<!--                <h1 class='card-header'>Statistics</h1>-->
+<!--                <mat-card-content>-->
+<!--                  <canvas baseChart-->
+<!--                          chartType='line'-->
+<!--                          [colors]='chartColors'-->
+<!--                          [datasets]='chartData'-->
+<!--                          [labels]='chartLabels'-->
+<!--                          [legend]='chartLegend'-->
+<!--                          [options]='chartOptions'>-->
+<!--                  </canvas>-->
+<!--                </mat-card-content>-->
+<!--              </mat-card>-->
+<!--            </div>-->
+<!--          </div>-->
         </div>
       </div>
       <div class='col-4' *ngIf='false'>
@@ -52,15 +52,15 @@
           <div class='row'>
             <div class='col-12'>
               <mat-card>
-                <mat-card-content>
-                  <canvas baseChart
-                          chartType='bar'
-                          [datasets]='chartData'
-                          [labels]='chartLabels'
-                          [legend]='chartLegend'
-                          [options]='chartOptions'>
-                  </canvas>
-                </mat-card-content>
+<!--                <mat-card-content>-->
+<!--                  <canvas baseChart-->
+<!--                          chartType='bar'-->
+<!--                          [datasets]='chartData'-->
+<!--                          [labels]='chartLabels'-->
+<!--                          [legend]='chartLegend'-->
+<!--                          [options]='chartOptions'>-->
+<!--                  </canvas>-->
+<!--                </mat-card-content>-->
 
               </mat-card>
             </div>
