--- a/libs/user/user-listing/src/lib/user-listing.component.html
+++ b/libs/user/user-listing/src/lib/user-listing.component.html
@@ -31,7 +31,7 @@
               <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
               <td mat-cell *matCellDef='let element'>
                 <mat-chip-list>
-                  <mat-chip color='primary' class='mat-chip mat-chip--success'>U/Dev</mat-chip>
+                  <mat-chip class='mat-chip'>U/Dev</mat-chip>
                 </mat-chip-list>
               </td>
             </ng-container>
