--- a/apps/optimal-human/src/app/app.component.scss
+++ b/apps/optimal-human/src/app/app.component.scss
@@ -75,6 +75,13 @@ mat-list-item {
     }
   }
 
+  &.active {
+    &:after {
+      opacity: .08;
+      //background: #eef9be;
+    }
+  }
+
 }
 
 main {
