--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -274,6 +274,15 @@ body {
   font-family: 'Calibri', sans-serif;
 }
 
+table.mat-table {
+  th.mat-header-cell {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.1px;
+    color: #9E9E9E;
+  }
+}
 
 @mixin matOhButtonScheme {
   border-radius: 8px !important;
