--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -1,64 +1,72 @@
-<div class='p-4'>
-
-  <form [formGroup]='editProfileForm' class='container align-self-start w-50  ml-0 pl-0' (ngSubmit)='submit()'>
-    <div class='row mb-3'>
-      <div class='col-12 muli-typography'>
-        <span class='mat-body-1'>Update logged in admin profile details</span>
+<form [formGroup]='editProfileForm' (ngSubmit)='submit()'>
+  <div class='p-4'>
+    <div class='container-fluid p-0'>
+      <div class='row mb-4 '>
+        <div class='col-12 d-flex align-items-center justify-content-end'>
+          <button
+            mat-flat-button
+            [disabled]='store.isEditLoading$ | async'
+            class='ml-3'
+            color='primary' type='submit'>Update
+          </button>
+          <button
+            [disabled]='store.isEditLoading$ | async'
+            mat-stroked-button type='button'
+            class='ml-3'
+            [routerLink]="['dashboard']">Cancel
+          </button>
+        </div>
       </div>
     </div>
 
-    <div class='row mb-1'>
-      <div class='col-12'>
-        <mat-form-field class='w-100'>
-          <mat-label>Name</mat-label>
-          <input matInput autocomplete='no' type='text' formControlName='name' required>
-          <mat-error
-            *ngIf='editProfileForm.controls.name.errors?.required'>
-            Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
-          <mat-error
-            *ngIf='editProfileForm.controls.name.errors?.alpha || editProfileForm.controls.name.errors?.pattern'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
-          <mat-error
-            *ngIf='editProfileForm.controls.name.errors?.maxLength'>Must not
-            exceed {{formValidationService.FIELD_VALIDATION_VALUES.NAME_LENGTH}} character limit
-          </mat-error>
-        </mat-form-field>
+    <mat-card class='p-0'>
+      <div class='container align-self-start w-50  ml-0 p-4'>
+        <div class='row'>
+          <div class='col-12 muli-typography'>
+            <span class='mat-subheading-1'>Update logged in admin profile details</span>
+          </div>
+        </div>
       </div>
-    </div>
+      <mat-divider></mat-divider>
+      <div class='container align-self-start w-50  ml-0 p-4'>
+        <div class='row mb-1'>
+          <div class='col-12'>
+            <mat-form-field class='w-100'>
+              <mat-label>Name</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='name' required>
+              <mat-error
+                *ngIf='editProfileForm.controls.name.errors?.required'>
+                Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
+              <mat-error
+                *ngIf='editProfileForm.controls.name.errors?.alpha || editProfileForm.controls.name.errors?.pattern'>{{formValidationService.fieldValidationMessage.invalid}}</mat-error>
+              <mat-error
+                *ngIf='editProfileForm.controls.name.errors?.maxLength'>Must not
+                exceed {{formValidationService.FIELD_VALIDATION_VALUES.NAME_LENGTH}} character limit
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
 
-    <div class='row mb-2'>
-      <div class='col-12'>
-        <mat-form-field class='w-100'>
-          <mat-label>Username</mat-label>
-          <input matInput autocomplete='no' type='text' formControlName='username' required>
-          <mat-error
-            *ngIf='editProfileForm.controls.username.errors?.required'>
-            Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
-          <mat-error
-            *ngIf='editProfileForm.controls.username.errors?.alphaNumeric'>Must not contain any special character or
-            white spaces.
-          </mat-error>
-          <mat-error
-            *ngIf='editProfileForm.controls.username.errors?.maxLength'>Must not
-            exceed {{formValidationService.FIELD_VALIDATION_VALUES.USERNAME_LENGTH}} character limit
-          </mat-error>
-        </mat-form-field>
+        <div class='row'>
+          <div class='col-12'>
+            <mat-form-field class='w-100'>
+              <mat-label>Username</mat-label>
+              <input matInput autocomplete='no' type='text' formControlName='username' required>
+              <mat-error
+                *ngIf='editProfileForm.controls.username.errors?.required'>
+                Name {{formValidationService.fieldValidationMessage.required}}</mat-error>
+              <mat-error
+                *ngIf='editProfileForm.controls.username.errors?.alphaNumeric'>Must not contain any special character or
+                white spaces.
+              </mat-error>
+              <mat-error
+                *ngIf='editProfileForm.controls.username.errors?.maxLength'>Must not
+                exceed {{formValidationService.FIELD_VALIDATION_VALUES.USERNAME_LENGTH}} character limit
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
       </div>
-    </div>
-
-    <div class='row'>
-      <div class='col-12 d-flex'>
-        <button
-          mat-flat-button
-          [disabled]='store.isEditLoading$ | async'
-          class='mr-3'
-          color='primary' type='submit'>Update
-        </button>
-        <button
-          [disabled]='store.isEditLoading$ | async'
-          mat-stroked-button type='button'
-          [routerLink]="['dashboard']">Cancel
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
+    </mat-card>
+  </div>
+</form>
