--- a/libs/user/user-edit/src/lib/user-edit.component.html
+++ b/libs/user/user-edit/src/lib/user-edit.component.html
@@ -1,66 +1,40 @@
-<div class='p-4'>
+<form [formGroup]='userForm'>
+
+  <div class='p-4'>
+    <div class='container-fluid p-0'>
+      <div class='row mb-4 '>
+        <div class='col-12 d-flex align-items-center justify-content-end'>
+          <button [disabled]='store.isLoading$ | async' mat-button color='primary' class='ml-3'
+                  type='button'>{{constantDataService.BUTTON_NAME.CANCEL | titlecase}}</button>
+          <button [disabled]='(store.isLoading$ | async) || !!!(userForm.dirty$ | async)'
+                  mat-flat-button color='primary' class='ml-3'
+                  type='button'>{{constantDataService.BUTTON_NAME.UPDATE | titlecase}}</button>
+        </div>
+      </div>
+    </div>
 
     <mat-card class='p-0'>
+      <div class='container align-self-start w-50  ml-0 p-4'>
+        <div class='row'>
+          <div class='col-12 muli-typography'>
+            <span class='mat-subheading-1'>Update user's personal details</span>
+          </div>
+        </div>
+      </div>
+      <mat-divider></mat-divider>
       <div class='container-fluid p-4'>
         <div class='row mb-4'>
           <div class='col-4'>
-            <mat-form-field class='w-100'>
-            <mat-label>Name</mat-label>
-            <input matInput autocomplete='no' type='text' formControlName='name'  required>
-          </mat-form-field>
+            <hidden-innovation-common-form-field
+              controlPath='name'
+              label='Name'
+            ></hidden-innovation-common-form-field>
           </div>
         </div>
-        <div class='row mb-4'>
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label>User Name</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label>Email ID</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label>language Detail</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class='row mb-4'>
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label>Role</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label>CREATED AT</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-
-          <div class='col-4'>
-            <mat-form-field class='w-100'>
-              <mat-label> UPDATED AT</mat-label>
-              <input matInput autocomplete='no' type='text' formControlName='name'  required>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class='row '>
-          <div class='col-12'>
-            <button mat-flat-button color='primary'>Save</button>
-            <button mat-stroked-button class='ml-2' >Cancel</button>
-          </div>
-        </div>
-
       </div>
 
     </mat-card>
 
-</div>
+  </div>
+
+</form>
